Configs for advanced-settings component/route
- router update in app.module
- routerLink(s) in index (unstyled)

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,3 +1,10 @@
 <h1>
   {{title}}
 </h1>
+
+<div>
+  <a routerLink="/smart-routes" routerLinkActive="active">smart-routes</a>
+</div>
+<div>
+  <a routerLink="/advanced-settings" routerLinkActive="active">advanced-settings</a>
+</div>
