--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,10 +1,54 @@
-<h1>
-  {{title}}
-</h1>
+<div [@slideRight]="'active'" id="index">
+  <div id="header-on-off">
+    <div id="enabled-label">Cypherpunk is disabled</div>
+    <div id="enabled-switch">
+      <label class="label-switch">
+        <input type="checkbox" />
+        <div class="checkbox"></div>
+      </label>
+    </div>
+  </div>
 
-<div>
-  <a routerLink="/smart-routes" routerLinkActive="active">smart-routes</a>
-</div>
-<div>
-  <a routerLink="/advanced-settings" routerLinkActive="active">advanced-settings</a>
+  <div id="smart-routing-on-off">
+    <div id="smart-routing-label">Smart Routing</div>
+    <div id="smart-routing-enabled-switch">
+      <label class="label-switch">
+        <input type="checkbox" checked/>
+        <div class="checkbox"></div>
+      </label>
+    </div>
+  </div>
+
+  <div id="smart-routing-info">
+    <div id="dest-site">netflix.com</div>
+    <div id="dest-site-routing-verbiage">
+      Your Smart Route to netflix.com<br/>
+      makes you appear to be connecting from
+    </div>
+    <div id="proxy-location"><img src="/assets/flags/us.svg" />United States of America</div>
+    <button id="edit-smart-route-button" type="button" routerLink="/smart-routes" routerLinkActive="active">Edit Smart Route</button>
+
+  </div>
+
+  <div id="privacy-on-off">
+    <div id="privacy-label">Privacy filter for netflix.com</div>
+    <div id="privacy-enabled-switch">
+      <label class="label-switch">
+        <input type="checkbox" checked/>
+        <div class="checkbox"></div>
+      </label>
+    </div>
+  </div>
+
+  <div id="actual-location-verbiage">
+    Your actual location is
+  </div>
+
+  <div id="actual-location">
+    <img src="/assets/flags/jp.svg" />Japan (78.12.34.567)
+  </div>
+
+  <div id="footer">
+    <a routerLink="/advanced-settings" routerLinkActive="active">advanced-settings</a>
+  </div>
 </div>
