--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -3,7 +3,11 @@
 /* You can add global styles to this file, and also import other style files */
 
 body {
+  background-color: #f7f7f7;
+  font-family: Lato, sans-serif;
+  font-size: rem(14);
   min-width: 320px;
   min-height: 480px;
-  background: linear-gradient(329deg, #1560bd, #76a8e7), #1560bd;
+  margin: 0;
+  padding: 0;
 }
