Moving animation to separate module

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -1,4 +1,4 @@
-<div [@slideRight]="'active'" id="index">
+<div id="index">
   <div id="header-on-off">
     <div id="enabled-label">Cypherpunk is disabled</div>
     <div id="enabled-switch">
