Loading servers now set property on proxy settings

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -13,7 +13,7 @@
     <div id="smart-routing-label">Smart Routing</div>
     <div id="smart-routing-enabled-switch">
       <label class="label-switch">
-        <input #enableSmartRouting type="checkbox" (change)="getServerList(enableSmartRouting.checked)"/>
+        <input #enableSmartRouting type="checkbox" (change)="loadServers(enableSmartRouting.checked)"/>
         <div class="checkbox"></div>
       </label>
     </div>
