--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -24,20 +24,45 @@
     </div>
 
     <!-- Smart routing off -->
-    <div id="smart-routing-off" class="info-section" *ngIf="!enableSmartRouting.checked">
+    <div id="smart-routing-off" *ngIf="!enableSmartRouting.checked">
       <div class="title">Your<br>Actual Location</div>
       <div class="flag-container">
         <img src="/assets/flags/jp.svg" />
       </div>
-      <div class="subtitle">
+      <div class="location">
         <label>Japan</label>
         IP Address: 78.12.34.567
       </div>
     </div>
 
     <!-- Smart routing on -->
-    <div id="smart-routing-info" *ngIf="enableSmartRouting.checked">
-      <div id="dest-site" [innerHTML]="domain"></div>
+    <div id="smart-routing-on" *ngIf="enableSmartRouting.checked">
+      <div class="title">Your<br>Public Location</div>
+      <div class="location">
+        <div class="flag-container small">
+          <img src="/assets/flags/jp.svg" />
+        </div>
+        <div class="subtitle">Japan</div>
+      </div>
+      <div class="location">
+        <div class="flag-container">
+          <img src="/assets/flags/us.svg" />
+        </div>
+        <div class="subtitle">
+          United States
+          <br>
+          <a href="#">(Select Country)<br>╲╱</a>
+        </div>
+      </div>
+      <div class="location">
+        <div class="flag-container small square">
+          <img src="/assets/cypherpunk_shaded_32.png" />
+        </div>
+        <div class="subtitle" [innerHTML]="domain"></div>
+      </div>
+    </div>
+
+      <!--<div id="dest-site" [innerHTML]="domain"></div>
       <div id="dest-site-routing-verbiage">
         Your Smart Route to netflix.com<br/>
         makes you appear to be connecting from
@@ -49,8 +74,7 @@
       </div>
       <div id="actual-location">
         <img src="/assets/flags/jp.svg" />Japan (78.12.34.567)
-      </div>
-    </div>
+      </div>-->
 
   </div>
 
