--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,6 +1,6 @@
 @import '~bourbon/app/assets/stylesheets/_bourbon';
 @import '~bourbon-neat/app/assets/stylesheets/_neat';
-@import url('https://fonts.googleapis.com/css?family=Dosis:300,400,500');
+@import url('https://fonts.googleapis.com/css?family=Dosis:200,300,400,500');
 /* You can add global styles to this file, and also import other style files */
 
 body {
@@ -8,7 +8,7 @@ body {
   font-family: 'Dosis', sans-serif;
   font-size: rem(14);
   font-weight: 300;
-  min-width: 360px;
+  width: 360px;
   margin: 0;
   padding: 0;
 }
