--- a/src/app/index/index.component.scss
+++ b/src/app/index/index.component.scss
@@ -93,8 +93,36 @@
 }
 
 #smart-routing-on {
-  @include pad(rem(20));
-  height: rem(330);
+  @include pad(rem(20) 0);
+  min-height: rem(330);
+
+  .routing-dd {
+    @include span-columns(12);
+    @include transition(height 0.5s);
+    background-color: #0f3c75;
+    overflow: hidden;
+    &.open { height: rem(150); }
+    &.closed { height: 0; }
+    .row {
+      @include pad(0 rem(10) 0 rem(30));
+      @include span-columns(12);
+      height: rem(28);
+      line-height: rem(28);
+      text-align: left;
+      font-weight: 200;
+      cursor: pointer;
+      .forward-icon { float: right; }
+      &:first-child { margin-top: rem(5); }
+      &:last-child { margin-bottom: rem(5); }
+      &:hover, &.checked:hover { background-color: lighten(#0f3c75, 10%); }
+      &.checked {
+        background: url('/assets/checkmarks/icon-circle-check.png') no-repeat 10px 50%;
+      }
+    }
+  }
+
+  .flags-wrap { @include pad(0 rem(20)); }
+
   .title {
     @include span-columns(12);
     font-size: rem(18);
@@ -131,7 +159,6 @@
         &:hover div {
           -webkit-text-stroke: 1px rgba(169, 169, 169, 0.4);
           color: rgba(169, 169, 169, 0.4);
-
         }
       }
     }
@@ -151,12 +178,12 @@
   .right {
     width: rem(275);
     white-space: nowrap;
-    animation: rscroll 15s linear infinite;
+    animation: rscroll 15s linear infinite alternate;
   }
   .left {
     width: rem(275);
     white-space: nowrap;
-    animation: lscroll 15s linear infinite;
+    animation: lscroll 15s linear infinite alternate;
   }
 
   @keyframes lscroll {
